[gd_scene load_steps=4 format=3 uid="uid://b3or1ncou622t"]

[ext_resource type="Script" uid="uid://lw5c7gwqboqc" path="res://Game/character.gd" id="1_wvyfx"]
[ext_resource type="Texture2D" uid="uid://bno2yip2i53du" path="res://Graphics/UI/HealthBar/Panel Empty.png" id="2_x570n"]
[ext_resource type="Texture2D" uid="uid://c2vdcwffkq0fh" path="res://Graphics/UI/HealthBar/Panel Empty Green.png" id="3_vdy7i"]

[node name="Character" type="Area2D"]
script = ExtResource("1_wvyfx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -7.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.625, -8.375)
scale = Vector2(0.38591, 0.415577)

[node name="CharUI" type="Control" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -120.0
offset_right = 75.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIContainer" type="VBoxContainer" parent="CharUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="TextureProgressBar" parent="CharUI/UIContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("2_x570n")
texture_progress = ExtResource("3_vdy7i")
metadata/_edit_lock_ = true

[node name="HealthValue" type="Label" parent="CharUI/UIContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StatusContainer" type="HBoxContainer" parent="CharUI/UIContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
